added basic style

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>movies_wishlist</title>
   </head>
-  <body style="background-color: rgb(63, 62, 62);">
+  <body style="background-color: #090814;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
