--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>movies_wishlist</title>
   </head>
-  <body style="background-color: #090814;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="background-color: #22254b;"></div>
   </body>
 </html>
